@@ -12,6 +12,7 @@
  * CHG: 廃止されたサービスのサムネイル表示対応を削除
  * CHG: サムネイル表示時にHTTPSが使用できるサービスではHTTPSを使用する
  * CHG: サービス終了したFavstarに関するメニュー項目を削除
+ * CHG: ヘルプページ・Google検索・Wikipedia等をHTTPSに対応したURLに変更
 
 ==== Ver 2.2.0(2018/11/03)
  * NEW: 絵文字に関する文字数カウントの新仕様に対応しました
